[gd_scene load_steps=7 format=3 uid="uid://bo1x0u6ah5bco"]

[ext_resource type="Script" path="res://scripts/freeze_trap_spell.gd" id="1_m4i0o"]
[ext_resource type="Texture2D" uid="uid://ds2llbuy1e08q" path="res://textures/itemsAndEffects/effects.png" id="2_dov6k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xk2y0"]

[sub_resource type="Animation" id="Animation_2nqxh"]
resource_name = "Freeze"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 10, 9]
}

[sub_resource type="Animation" id="Animation_457n2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f5rh0"]
_data = {
"Freeze": SubResource("Animation_2nqxh"),
"RESET": SubResource("Animation_457n2")
}

[node name="FreezeTrapSpell" type="Area2D"]
scale = Vector2(2, 2)
collision_layer = 16
collision_mask = 2
script = ExtResource("1_m4i0o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xk2y0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_dov6k")
hframes = 20
vframes = 10
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f5rh0")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
